cycles render bake image problem #49570

Closed
opened 2016-10-04 18:26:24 +02:00 by jianzwan · 14 comments

Blender Version
2.78

Short description of error
When several materials in one object , if only one material have image node , bake will stop.
The problem is , when too many materials in one object and too many objects in one scene , I can not add image node for every one.
Untitled.jpg

**Blender Version** 2.78 **Short description of error** When several materials in one object , if only one material have image node , bake will stop. The problem is , when too many materials in one object and too many objects in one scene , I can not add image node for every one. ![Untitled.jpg](https://archive.blender.org/developer/F373825/Untitled.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @An_Zi

Added subscriber: @An_Zi

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This report is incomplete (no file attached).

That said this is not a bug, but a design decision. Have you tried baking to a copy of the object with a single material/image node?

This report is incomplete (no file attached). That said this is not a bug, but a design decision. Have you tried baking to a copy of the object with a single material/image node?
Author

Use one object ,I have to make all textures into one texture to keep indirect lighting color .
Untitled2.jpg

Use one object ,I have to make all textures into one texture to keep indirect lighting color . ![Untitled2.jpg](https://archive.blender.org/developer/F374304/Untitled2.jpg)

I'm not sure what you mean, or what you would suggest. If one object and a single texture is not what you are looking for, then what is it?

I'm not sure what you mean, or what you would suggest. If one object and a single texture is not what you are looking for, then what is it?
Author

In blender render , select image and object , the bake can execute .
In cycles render , I must add image node in every material , or I must use one material in one object.
bakeDug2.jpg

In blender render , select image and object , the bake can execute . In cycles render , I must add image node in every material , or I must use one material in one object. ![bakeDug2.jpg](https://archive.blender.org/developer/F375050/bakeDug2.jpg)

Added subscriber: @Sergey

Added subscriber: @Sergey

Please always attach small .blend file with clear steps how to reproduce the error from that file.

Reproducing the error based on just screenshots does not really work.

Please always attach small .blend file with clear steps how to reproduce the error from that file. Reproducing the error based on just screenshots does not really work.
Author
[bake_bug.blend](https://archive.blender.org/developer/F376906/bake_bug.blend)
Dalai Felinto was assigned by Sergey Sharybin 2016-10-11 14:48:01 +02:00

This issue was referenced by 2cd7b80cae

This issue was referenced by 2cd7b80cae671baa6552dedd980ba131517605e8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

It should be fixed now, please test a night build and let me know if it still fails.

It should be fixed now, please test a night build and let me know if it still fails.
Author

In #49570#437697, @dfelinto wrote:
It should be fixed now, please test a night build and let me know if it still fails.

It worked. Thank you !

> In #49570#437697, @dfelinto wrote: > It should be fixed now, please test a night build and let me know if it still fails. It worked. Thank you !
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49570
No description provided.